feat(db): Stage 2 nested auto-decomposition, JMH benchmarks, and benchmark suite filter (#44)
* feat(db): add DataType-aware JdbcTypeMapper.bind() overload (Option B, Step 1)

Adds bind(PreparedStatement, int, Object, DataType) alongside the existing
instanceof-based bind(). The typed overload provides:
- Correct setNull SQL types (Types.INTEGER vs Types.NULL)
- String-to-primitive coercion for Datafaker numeric types (e.g. "42" → setInt)
- Accurate binding for all PrimitiveType kinds, EnumType, CustomDatafakerType

32 unit tests passing (10 Option A + 22 Option B).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat(db): add optional schema to DatabaseDestination for typed JDBC binding (Option B, Step 2)

- New constructor: DatabaseDestination(config, Map<String, DataType> schema)
- When schema present, uses JdbcTypeMapper.bind(ps, i, value, type) for each field
- When schema absent or field not in schema, falls back to Option A instanceof binding
- 5 new unit tests: typed binding, String→Int coercion, null with correct SQL type,
  partial schema fallback, enum field binding

Total: 15 unit tests passing (10 original + 5 new).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat(db): wire DataType schema into DatabaseDestination from CLI (Step 3)

- ExecuteCommand.createDatabaseDestination() builds Map<String,DataType>
  from parsed DataStructure and injects it into DatabaseDestination(config, schema)
- Enables schema-aware JDBC binding (Option B) end-to-end for database jobs
- Add two new DatabaseDestinationIT tests:
  - shouldInsertPassportRecordsWithSchema: 5 records with typed schema against PostgreSQL
  - shouldCoerceStringToDateWithSchemaAgainstPostgres: ISO-8601 String → DATE coercion
- All 11 DatabaseDestinationIT tests pass

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* refactor(db): move schema parsing into DatabaseDestination.open()

- Constructor now accepts Map<String,String> (raw YAML type strings) instead o